# zap

./: .pre-commit-config.yaml  Cargo.toml  README.md
benches/: kv_bench.rs
src/: batch.rs  db.rs  lib.rs  merge.rs  options.rs  result.rs
src/error/: index.rs  mod.rs
src/index/: btree.rs  hashmap.rs  keydir.rs  mod.rs
src/io/: mmap.rs  mod.rs  standard.rs
src/storage/: entry.rs  file_handle.rs  hintfile.rs  mod.rs
