[package]
name = "template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
bytes = "1.8.0"
dashmap = "6.1.0"
enum_dispatch = "0.3.13"
parking_lot = "0.12.3"
thiserror = "2.0.0"

[dev-dependencies]
rand = "0.8.5"
